--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,12 +1,4 @@
-<h1>Create new question</h1>
-<%# <%= Rails.application.routes.url_helpers.test_questions_path(params[:test_id])%> %>
-<form action=<%= "/tests/#{params[:test_id]}/questions"%> method="post">
-  <input name="authenticity_token" value="<%= form_authenticity_token%>" type="hidden">
-
-  <p>
-    <label for="question-text">Text:</label>
-    <input type="text" name=question[text] id="question-text">
-  </p><br>
-
-  <input type="submit" value="Create">
-</form>
+<h1>Create new question for <%= @test.title%></h1>
+<%= render "shared/error", resource: @question%>
+<%= render "form"%>
+<%= link_to "Back", test_questions_path(@test)%>
