--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit question</h1>
+<h1><%= question_header %></h1>
 <%= render "shared/error", resource: @question%>
 <%= render "form"%>
 <%= link_to "Back", test_questions_path(@question.test)%>
