--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,10 @@
-<h1><%= @test.title%> questions</h1>
+<h1><%= @test.title %> questions</h1>
 <table>
   <tr>
     <th>Title</th>
     <th colspan="3">Actions</th>
   </tr>
-  <%= render @questions%>
+  <%= render @questions %>
 </table>
-<%= link_to "Create question", new_test_question_path(@test)%>
+<%= link_to "Create question", new_test_question_path(@test) %><br>
+<%= link_to "Back", tests_path %>
