--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,4 +2,4 @@
   <strong> Text: </strong>
   <%= @question.text %>
 </p>
-<%= link_to "Back", test_questions_path(@question.test)%>
+<%= link_to "Back", test_path(@question.test)%>
