--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: [@test, @question], local: true do |form| %>
   <p>
     <%= form.label :text %><br>
-    <%= form.text_field :text, id: :question_text %>
+    <%= form.text_field :text %>
   </p>
 
   <p><%= form.submit %></p>
