--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,9 +1,9 @@
-<tr>
-  <td><%= question.text%></td>
-  <td> <%= link_to "Show", question_path(question)%> </td>
-  <td> <%= link_to "Edit", edit_question_path(question)%></td>
-  <td> <%= link_to "Delete", 
+<li>
+   <%= question.text%><br>
+   <%= link_to "Show", question_path(question)%> 
+   <%= link_to "Edit", edit_question_path(question)%>
+   <%= link_to "Delete", 
                   question_path(question),
                   method: :delete,
-                  data: {confirm: "Are you sure?"}%></td>
-</tr>
+                  data: {confirm: "Are you sure?"}%>
+</li>
