--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,10 +1,8 @@
-<h1><%= @test.title %> </h1>
-<table>
-  <tr>
-    <th>Title</th>
-    <th colspan="3">Actions</th>
-  </tr>
+<h1><%= @test.title %> Test </h1>
+<p><strong>Level:</strong> <%= test_level(@test)%></p>
+<h2>Questions</h2>
+<ol>
   <%= render @test.questions %>
-</table>
+</ol>
 <%= link_to "Create question", new_test_question_path(@test) %><br>
 <%= link_to "Back", tests_path %>
