--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,3 +1,15 @@
 .nav.user{
   text-align: right;
 }
+
+.nav.logout{
+  text-align: right;
+}
+
+.nav.sign{
+  text-align: center;
+}
+
+.begin{
+  text-align: center
+}
