--- a/app/views/layouts/_user_nav.html.erb
+++ b/app/views/layouts/_user_nav.html.erb
@@ -1,12 +1,6 @@
-<% if logged_in? %>
+<% if user_signed_in? %>
   <p class = "nav user">Welcome, <b><%= current_user.email %></b> Guru</p>
   <div class='nav logout'>
-      <%= button_to "Logout", logout_path, method: :delete %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   </div>
-  <% else%>
-    <p>
-      <div class='nav sign'>
-        <%= link_to "Sign in", login_path %>/<%= link_to "Sign up", signup_path %>
-      </div>
-    </p>
 <% end %>
