--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= render 'layouts/header'%>
+    <%= flash_helper %>
     <%= yield %>
     <%= render 'layouts/footer'%>
   </body>
