--- a/app/views/main_page/show.html.erb
+++ b/app/views/main_page/show.html.erb
@@ -1,3 +1,11 @@
+<% unless user_signed_in? %>
+  <p>
+    <div class='nav sign'>
+      <%= link_to "Sign in", new_user_session_path %>/<%= link_to "Sign up", new_user_registration_path %>
+    </div>
+  </p>
+<% end %>
+
 <div class = 'begin'>
   <strong>
     <%= link_to "BEGIN!", tests_path %>
