--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -14,8 +14,8 @@
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p>
   <p>
-    <%= form.label :author_id %>
-    <%= form.collection_select :user_id, User.authors, :id, :name, prompt: true %>
+    <%# form.label :author_id %>
+    <%= form.hidden_field :user_id, value:  @test.author&.id || current_user.id %>
   </p>
   <%= form.submit %>
 <% end %>
