--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render 'layouts/header'%>
-    <%= render 'user/nav'%>
+    <%= render 'admin/nav'%>
     <%= flash_helper %>
     <%= yield %>
     <%= render 'layouts/footer'%>
