--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -2,8 +2,35 @@
   text-align: right;
 }
 
-.nav.logout{
-  text-align: right;
+.nav.user-email{
+  border-bottom: 1px solid #3c85e0;
+}
+
+.nav.nav-admin{
+  height: 35px;
+  padding: 15px;
+  line-height: 35px;
+  color: #ffffff;
+  background-color: #4293e6;
+  margin-bottom: 40px;
+}
+
+.nav-admin.title {
+  font-size: 140%;
+  font-weight: bold;
+}
+
+.nav-admin.user{
+  float: right;
+}
+
+.nav-admin.user-email {
+  text-decoration: underline;
+}
+
+.nav.nav-admin
+a {
+  color: #ffffff;
 }
 
 .nav.sign{
@@ -11,5 +38,5 @@
 }
 
 .begin{
-  text-align: center
+  text-align: center;
 }
