--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,6 +1,6 @@
 <h1><%= test_header(@test) %></h1>
 <%= render 'shared/error', resource: @test %>
-<%= form_with model: @test, local: true do |form| %>
+<%= form_with model: [:admin, @test], local: true do |form| %>
   <p>  
     <%= form.label :title %>
     <%= form.text_field :title%>
