--- a/app/views/main_page/show.html.erb
+++ b/app/views/main_page/show.html.erb
@@ -7,7 +7,13 @@
 <% end %>
 
 <div class = 'begin'>
-  <strong>
-    <%= link_to "BEGIN!", tests_path %>
-  </strong>
+  <% if current_user.is_a?(Admin) %>
+    <strong>
+      <%= link_to "BEGIN!", admin_tests_path %>
+    </strong>
+  <% else %>
+    <strong>
+      <%= link_to "BEGIN!", tests_path %>
+    </strong>
+  <% end %>
 </div>
