--- a/app/views/user/_nav.html.erb
+++ b/app/views/user/_nav.html.erb
@@ -1,6 +1,5 @@
 <% if user_signed_in? %>
-  <p class = "nav user">Welcome, <b><%= current_user.email %></b> Guru</p>
-  <div class='nav logout'>
+  <div class = "nav user">Welcome, <b class="nav user-email"><%= current_user.email %></b> Guru |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   </div>
 <% end %>
