--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -15,7 +15,7 @@
   </p>
   <p>
     <%# form.label :author_id %>
-    <%= form.hidden_field :user_id, value:  @test.author&.id || current_user.id %>
+    <%# form.hidden_field :user_id, value:  @test.author&.id || current_user.id %>
   </p>
   <%= form.submit %>
 <% end %>
