--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,8 +1,8 @@
 <h1>Passing the <%= @test_passage.test.title %> Test</h1>
 
-<b>
+<p>
   <%= @test_passage.current_question.text%>
-</b>
+</p>
 
 <%= render 'question_index', test_passage: @test_passage%>
 
@@ -12,6 +12,7 @@
     <%= b.check_box id: "answer_ids_#{b.object.id}" %>
     <%= b.label %>
   </p>
-  <% end %> 
+  <% end %>
+  <p> <%= link_to "Gist question", gist_test_passage_path(@test_passage), method: :post%> </p>
   <p><%= form.submit "Next" %></p>
 <% end %>
