--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -13,6 +13,8 @@
     <%= b.label %>
   </p>
   <% end %>
-  <p> <%= link_to "Gist question", gist_test_passage_path(@test_passage), method: :post%> </p>
+  <%= link_to "Gist question", admin_gists_path(@test_passage, question_id: @test_passage.current_question.id, test_passage_id: @test_passage.id), method: :post%> </p>
   <p><%= form.submit "Next" %></p>
 <% end %>
+
+<p> <%# render 'admin/gists/form', question: @test_passage.current_question %>
