--- a/app/views/admin/gists/_gist.html.erb
+++ b/app/views/admin/gists/_gist.html.erb
@@ -4,7 +4,7 @@
   </td>
 
   <td>
-    <%= link_to gist.url.split("/")[-1], gist.url, target: :_blank %>
+    <%= link_to gist.hash, gist.url, target: :_blank %>
   </td>
 
   <td>
