--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,10 +1,10 @@
 <% if user_signed_in? %>
-  <div class="nav nav-admin">
-    <span class="nav-admin title">TestGuru Admin Panel</span>
+  <div class="mynav nav-admin">
+    <span class="mynav-admin title">TestGuru Admin Panel</span>
 
-    <div class = "nav-admin user">
-      <%= link_to 'Gists', admin_gists_path %>
-      Welcome, <b class="nav-admin user-email"><%= current_user.email %></b> Guru |
+    <div class = "mynav-admin user">
+      <%= link_to 'Gists', admin_gists_path %> |
+      Welcome, <b class="mynav-admin user-email"><%= current_user.email %></b> Guru |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     </div>
   </div>
