--- a/app/views/main_page/show.html.erb
+++ b/app/views/main_page/show.html.erb
@@ -1,6 +1,6 @@
 <% unless user_signed_in? %>
   <p>
-    <div class='nav sign'>
+    <div class='sign'>
       <%= link_to "Sign in", new_user_session_path %>/<%= link_to "Sign up", new_user_registration_path %>
     </div>
   </p>
