--- a/app/views/user/_nav.html.erb
+++ b/app/views/user/_nav.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <div class = "nav user">Welcome, <b class="nav user-email"><%= current_user.email %></b> Guru |
+  <div class = "mynav user">Welcome, <b class="mynav user-email"><%= current_user.email %></b> Guru |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   </div>
 <% end %>
