--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,16 @@
  @import "typography/icons";
  @import "global";
 
- #footer {
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+ .footer {
   position: absolute;
   margin-top: 100px;
   bottom: 0;
