--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,17 +18,26 @@
     <%= f.text_field :last_name %>
   </div>
 
+  
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: 'password' %>
+    <span class="password_icons">
+      <%= octicon 'check', class: 'password-success hide' %>
+      <%= octicon 'x', class: 'password-fail hide' %>
+    </span>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'password_confirmation' %>
+    <span class="password_confirmation_icons">
+      <%= octicon 'check', class: 'password-success hide' %>
+      <%= octicon 'x', class: 'password-fail hide' %>
+    </span>
   </div>
 
   <div class="actions">
