--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -6,4 +6,5 @@
   <%# render partial: 'questions/question', collection: @test.questions%>
 </ol>
 <%= link_to "Create question", new_admin_test_question_path(@test) %><br>
+<%= link_to "Edit", edit_admin_test_path(@test)%> | 
 <%= link_to "Back", admin_tests_path %>
