Added form_inline script

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id='footer'>
+<footer class='footer'>
 <%= current_year%> <%= author_name%> <%= github_url(author_git, repo)%>
 <p>Приложение TestGuru предназначено для создания, управления и выполнения различных тестов.</p>
 <%= thinknetica%>
