--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <%= flash_helper %>
       <div class="content-wrap">
         <%= yield %>
-      <div>
+      </div>
       <%= render 'layouts/footer' %>
     </div>
   </body>
