--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,10 +1,18 @@
 <tr>
-  <td> <%= test.title%></td>
-  <td> <%= questions_amount(test) %></td>
-  <td> <%= test_level(test) %></td>
-  <td> <%= link_to "show", admin_test_path(test)%></td>
-  <td> <%= link_to "Edit", edit_admin_test_path(test)%></td>
-  <td> <%= link_to "Delete", 
+  <td class="align-middle">
+    <%= content_tag :span, test.title, class: 'test-title', data: { test_id: test.id }%>
+    <%= render 'form_inline', test: test == @test ? @test : test  %>
+  </td>
+  <td class="align-middle"> <%= questions_amount(test) %></td>
+  <td class="align-middle"> <%= test_level(test) %></td>
+  <td class="align-middle"> <%= link_to "show", admin_test_path(test)%></td>
+  <td class="align-middle">
+    <%= link_to "Edit",
+                edit_admin_test_path(test),
+                data: {test_id: test.id},
+                class: 'form-inline-link' %>
+  </td>
+  <td class="align-middle"> <%= link_to "Delete", 
                   admin_test_path(test),
                   method: :delete,
                   data: {confirm: "Are you sure?"}%></td>
