--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Tests</h1>
+<%= render 'shared/error', resource: @test %>
 <table class="table">
   <tr>
     <th class="sort-by-title pointer">
