--- a/app/views/badges/_badge.html.erb
+++ b/app/views/badges/_badge.html.erb
@@ -1,4 +1,4 @@
-<tr>
-  <td> <%= badge.title %> </td>
-  <td> <%= image_tag badge.icon_path %> </td>
-</tr>
+<li class="list-group-item">
+  <%= badge.title %> <%= image_tag badge.icon_path %><br>
+  <%= badge.description %>
+</li>
