--- a/app/views/badges/index.html.erb
+++ b/app/views/badges/index.html.erb
@@ -1,10 +1,6 @@
 <h1>Available Badges</h1>
-<table class="table">
-  <tr>
-    <th>Title</th>
-    <th></th>
-  </tr>
-  <%= render @badges %>
-</table>
+<ul class="list-group">
+  <%= render partial: 'badge', collection: @badges %>
+</ul>
 
 <%= link_to "Back to Tests", tests_path %>
