--- a/app/views/admin/badges/choose_type.html.erb
+++ b/app/views/admin/badges/choose_type.html.erb
@@ -2,7 +2,7 @@
 <%= form_with url: new_admin_badge_path, method: :get, local: true do |form| %>
   <p>
     <%= form.label :type %>
-    <%= form.select :type, Badge::RULES%>
+    <%= form.select :type, types_collection %>
   </p>
   <%= form.submit "Next" %>
 <% end %>
