Moved logic related to time limit exceeding from controller to model

--- a/app/views/test_passages/_progress_bar.html.erb
+++ b/app/views/test_passages/_progress_bar.html.erb
@@ -6,5 +6,5 @@
                   # style: "width: #{@test_passage.progress}%".html_safe,
                   data: { progress: @test_passage.progress,
                           completed: @test_passage.completed?,
-                          passed: @test_passage.passed? } %>
+                          passed: @test_passage.passed } %>
 </div><br>
